# cloud-ledger

./: .env.example  .gitignore  README.md  docker-compose.yml  docker-image.yml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: api-tests.yml  deploy-prod.yml  docker-image.yml  e2e.yml  k6-load.yml  lambdas.yml  outbox-poller.yml  terraform-validate.yml
api/: Dockerfile  build.gradle  settings.gradle
e2e/: conftest.py  pyproject.toml  test_admin_rebuild.py  test_cleanup.py  test_error_cases.py  test_happy_path.py  test_query_endpoints.py
k6/: README.md
k6/config/: environments.js  thresholds.js
k6/data/: seed.js
k6/lib/: auth.js  checks.js  client.js  ledger.js  uuid.js
k6/scenarios/: conflict.js  load-transfers.js  read-balance.js  smoke.js
k6/scenarios/tier2/: chaos-reads.js  soak.js
lambdas/: README.md  main.py  pyproject.toml  pyrightconfig.json
lambdas/cleanup/: Dockerfile  handler.py  test_handler.py
lambdas/outbox_poller/: Dockerfile  handler.py  test_handler.py  test_handler_it.py
lambdas/projector/: Dockerfile  handler.py  test_handler.py
lambdas/shared/: db.py  dynamo.py  sqs.py
terraform/envs/local/: .terraform.tfstate.lock.info  main.tf  terraform.tf  variables.tf
terraform/envs/prod/: main.tf  outputs.tf  terraform.tf  variables.tf
terraform/modules/auth/: main.tf  output.tf  variables.tf
terraform/modules/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/messaging/: main.tf  (+2 more)
terraform/scripts/: local-bootstrap.sh  local-destroy.sh  local-import.sh
(+182 files in other folders)
