[project]
name = "e2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "boto3>=1.43.34",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.1.1",
    "requests>=2.34.2",
]

[tool.pytest.ini_options]
testpaths = ["."]

