[project]
name = "lambdas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.33",
    "psycopg>=3.3.4",
    # OTel API only — needed at import time and for the inject/extract propagation logic in the
    # handlers. The full ADOT distro + SDK is provided at runtime by the layer copied into the
    # Lambda image (see each Dockerfile), so it is intentionally NOT a runtime dependency here.
    "opentelemetry-api>=1.43.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[dynamodb,sqs]>=1.43.33",
    "moto>=5.2.2",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "testcontainers[postgres]>=4.14.2",
]
